[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
geopandas="1.1.1"
pandas = ">2.0"
python="3.11.10"
jupyter = "^1.1.1"
gcsfs = "^2025.9.0"
folium = ">=0.12"
matplotlib = "^3.10.7"
mapclassify = "^2.10.0"
pyproj = "^3.7.2"
osmnx = ">2"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
